--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,13 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.project.mobilesafe.activity.SplashActivity"
             android:label="@string/app_name" >
@@ -23,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name=".activity.HomeActivity"/>
     </application>
 
 </manifest>
