--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,8 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name=".activity.HomeActivity"/>
+        <activity android:name=".activity.HomeActivity" />
+		<activity android:name=".activity.SettingActivity" />
     </application>
 
 </manifest>
