--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -26,6 +26,11 @@
         </activity>
         <activity android:name=".activity.HomeActivity" />
 		<activity android:name=".activity.SettingActivity" />
+		<activity android:name=".activity.LostFindActivity" />
+		<activity android:name=".activity.Setup1Activity" />
+		<activity android:name=".activity.Setup2Activity" />
+		<activity android:name=".activity.Setup3Activity" />
+		<activity android:name=".activity.Setup4Activity" />
     </application>
 
 </manifest>
