--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
    
     <application
         android:allowBackup="true"
@@ -45,6 +46,9 @@
         <activity android:name=".activity.ContactActivity" />
         <activity android:name=".activity.AToolsActivity" />
         <activity android:name=".activity.AddressActivity" />
+        <activity android:name=".activity.DragViewActivity" 
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            />
 
         <receiver android:name=".receiver.BootCompleteReceiver" >
             <intent-filter>
