--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -15,18 +15,22 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-   
+   	
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="com.project.mobilesafe"
+        ></instrumentation>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="android.test.runner"/>
         <activity
             android:name="com.project.mobilesafe.activity.SplashActivity"
             android:label="@string/app_name" >
@@ -46,6 +50,9 @@
         <activity android:name=".activity.ContactActivity" />
         <activity android:name=".activity.AToolsActivity" />
         <activity android:name=".activity.AddressActivity" />
+        <activity android:name=".activity.CallSafeActivity" />
+        <activity android:name=".activity.CallSafeActivity2" />
+        
         <activity android:name=".activity.DragViewActivity" 
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             />
